syntax = "proto3";

package nameserver;

option go_package = "./;proto";

service Name {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Logout(LogoutRequest) returns (LogoutResponse);
  rpc CreateFile(CreateFileRequest) returns (CreateFileResponse);
  rpc CreateDir(CreateDirRequest) returns (CreateDirResponse);
  rpc DeleteFile(DeleteFileRequest) returns (DeleteFileResponse);
  rpc DeleteDir(DeleteDirRequest) returns (DeleteDirResponse);
  rpc ListDir(ListDirRequest) returns (ListDirResponse);
  rpc StatFile(StatFileRequest) returns (StatFileResponse);
  rpc OpenFile(OpenFileRequest) returns (OpenFileResponse);
  rpc CloseFile(CloseFileRequest) returns (CloseFileResponse);
  rpc PrepareWrite(PrepareWriteRequest) returns (PrepareWriteResponse);
}

message Permission {
  bool read = 1;
  bool write = 2;
}

message Permissions {
  string owner = 1;
  string group = 2;
  Permission ownerPermission = 3;
  Permission groupPermission = 4;
  Permission otherPermission = 5;
}


message DirEntry {
  string path = 1;
  bool isDir = 2;
  Permissions permissions = 3;
  uint64 createdAt = 4;
  uint64 modifiedAt = 5;
  uint64 accessedAr = 6;
}

message StatBlockInfo {
  string host = 1;
  string blockId = 2;
  uint32 crc = 3;
  uint64 sequence = 4;
  uint32 length = 5;
}

message LoginRequest {
  string user = 1;
  string hashedPassword = 2;
  string hashType = 3;
}

message LoginResponse {
  string user = 1;
  string token = 2;
}

message LogoutRequest {
  string token = 1;
}

message LogoutResponse {
}

message CreateFileRequest {
  string token = 1;
  string path = 2;
  Permissions permissions = 3;
}

message CreateFileResponse {
}

message CreateDirRequest {
  string token = 1;
  string path = 2;
  Permissions permissions = 3;
}

message CreateDirResponse {
}

message DeleteFileRequest {
  string token = 1;
  string path = 2;
}

message DeleteFileResponse {
}


message DeleteDirRequest {
  string token = 1;
  string path = 2;
}

message DeleteDirResponse {
}

message ListDirRequest {
  string token = 1;
  string path = 2;
}

message ListDirResponse {
  string path = 1;
  repeated DirEntry entries = 2;
}

message StatFileRequest {
  string token = 1;
  string path = 2;
}

message StatFileResponse {
  string path = 1;
  DirEntry entry = 2;
  repeated StatBlockInfo blockInfos = 3;
}

message OpenFileRequest {
  string token = 1;
  string path = 2;
}

message OpenFileResponse {
  string path = 1;
  string handle = 2;
}

message CloseFileRequest {
  string token = 1;
  string path = 2;
  string handle = 3;
}

message CloseFileResponse {
}

message PrepareWriteRequest {
  string token = 1;
  string path = 2;
  string handle = 3;
  uint64 sequence = 4;
  string location = 5;
}


message PrepareWriteResponse {
  string primary = 5;
  repeated string others = 6;
}